--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,15 +9,15 @@
 									<div class="logo-footer"><img id="logo-footer" src="../public/template/images/logo_blue_footer.png" alt=""></div>
 									<p>Качественные технические ткани от российской Фабрики по оптовым ценам</p>
 									<ul class="info">
-										<li><i class="fa fa-map-marker"></i> Москва</li>
-										<li><i class="fa fa-phone"></i> +7-999-888-77-01</li>
-										<li><i class="fa fa-envelope-o"></i> info@tkan2.ru</li>
+										<li><i class="fa fa-map-marker"></i> г. Москва, Сенежская ул., д.6А</li>
+										<li><i class="fa fa-phone"></i> 8 (925) 117-38-34</li>
+										<li><i class="fa fa-envelope-o"></i> ikodes@yandex.ru</li>
 									</ul>
 								</div>
 							</div>
 							<div class="col-sm-6">
 								<div class="footer-content">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15075.366210717157!2d37.43137331555361!3d55.82853910934179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b548753e57bc27%3A0x5d316044540a4270!2z0KLRg9GI0LjQvdGB0LrQsNGPINGD0LsuLCDQnNC-0YHQutCy0LA!5e0!3m2!1sru!2sru!4v1481988033080" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25331.618979616353!2d37.498707426020395!3d55.86232036234881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5378c597e8ec9%3A0xb2ddee35d833749e!2z0KHQtdC90LXQttGB0LrQsNGPINGD0LsuLCA20JAsINCc0L7RgdC60LLQsCwg0KDQvtGB0YHQuNGPLCAxMjU0MTM!5e0!3m2!1sru!2sru!4v1482256391320" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
 								</div>
 							</div>
 
@@ -31,7 +31,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-4">
-								<p>Copyright © 2016 Ткань2. Все права защищены</p>
+								<p>Copyright © 2016 Кодес. Все права защищены</p>
 							</div>
 							<div class="col-md-8">
 								<nav class="navbar navbar-default" role="navigation">
