--- a/_includes/header-top.html
+++ b/_includes/header-top.html
@@ -3,9 +3,9 @@
     <div class="row">
       <div class="col-md-8">
         <ul class="info">
-          <li><i class="fa fa-phone"></i>  +7-999-888-77-01</li>
+          <li><i class="fa fa-phone"></i>  8 (925) 117-38-34</li>
           <li><i class="fa fa-home"></i> Москва</li>
-          <li><i class="fa fa-envelope"></i> info@tkan2.ru</li>
+          <li><i class="fa fa-envelope"></i> ikodes@yandex.ru</li>
         </ul>
       </div>
       <div class="col-md-4">
