--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
 									<div class="logo-footer"><img id="logo-footer" src="../public/template/images/logo_blue.png" alt=""></div>
 									<p>Качественные технические ткани от российской Фабрики по оптовым ценам</p>
 									<ul class="info">
-										<li><i class="fa fa-map-marker"></i> г. Москва, Сенежская ул., д.6А</li>
-										<li><i class="fa fa-phone"></i> 8 (925) 117-38-34</li>
+										<li><i class="fa fa-map-marker"></i> 119048, г. Москва, ул. Ефремова, д. 20</li>
+										<li><i class="fa fa-phone"></i> 8(499)398-17-40</li>
 										<li><i class="fa fa-envelope-o"></i> ikodes@yandex.ru</li>
 									</ul>
 								</div>
@@ -31,7 +31,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-4">
-								<p>Copyright © 2016 Кодес. Все права защищены</p>
+								<p>Copyright © 2020 Кодес. Все права защищены</p>
 							</div>
 							<div class="col-md-8">
 								<nav class="navbar navbar-default" role="navigation">
