--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 									<div class="logo-footer"><img id="logo-footer" src="../public/template/images/logo_blue.png" alt=""></div>
 									<p>Качественные технические ткани от российской Фабрики по оптовым ценам</p>
 									<ul class="info">
-										<li><i class="fa fa-map-marker"></i> г. Москва, Сенежская ул., д.6А</li>
+										<li><i class="fa fa-map-marker"></i> г. Москва</li>
 										<li><i class="fa fa-phone"></i> 8 (925) 117-38-34</li>
 										<li><i class="fa fa-envelope-o"></i> ikodes@yandex.ru</li>
 									</ul>
